--- a/es1.html
+++ b/es1.html
@@ -4,12 +4,12 @@
     </head>
     <body>
         <h1>Es1</h1>
-        <p>Pagina html statica, includi un file javascript, 
+        <p>Paginaa html statica, includi un file javascript, 
             aggiungi un bottone, aggiungi un click listener al bottone che cambia il contenuto di un 
             tag span e il contenuto e colore di un div.
         </p>
 
-        <span id= "span1">C'è un bottone</span>
+        <span id= "span1">C'ï¿½ un bottone</span>
         <br><br>
         <button id= "btn1">Non premere</button>
         <div id= "div1" style= "background-color: rgb(30, 255, 0)">
