--- a/es1.html
+++ b/es1.html
@@ -24,6 +24,7 @@
             var testo = span1.innerHTML;
             console.log("testo ", testo);
             document.getElementById("span1").innerHTML = "CUCU";
+            document.getElementById("div1").setAttribute("style", "background-color:  rgb(163, 36, 68)")
         </script>
     </body>
 </html>
