--- a/es1.html
+++ b/es1.html
@@ -2,7 +2,7 @@
     <head>
         <title>Es1 Training</title>
     </head>
-    <body>
+    <body id="body1">
         <h1>Es1</h1>
         <p>Pagina html statica, includi un file javascript, 
             aggiungi un bottone, aggiungi un click listener al bottone che cambia il contenuto di un 
